--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -51,7 +51,14 @@
     <Compile Include="DTOs\CustomerDTOs\PaymentDTO.cs" />
     <Compile Include="DTOs\CustomerDTOs\ReservationDTO.cs" />
     <Compile Include="DTOs\CustomerDTOs\ReviewDTO.cs" />
-    <Compile Include="DTOs\ServiceProviderDTOs\Class1.cs" />
+    <Compile Include="DTOs\ServiceProviderDTOs\ParkingSpotSPDTO.cs" />
+    <Compile Include="DTOs\ServiceProviderDTOs\PaymentSPDTO.cs" />
+    <Compile Include="DTOs\ServiceProviderDTOs\ReservationSPDTO.cs" />
+    <Compile Include="DTOs\ServiceProviderDTOs\ReviewSPDTO.cs" />
+    <Compile Include="DTOs\ServiceProviderDTOs\ServiceProviderDTO.cs" />
+    <Compile Include="DTOs\ServiceProviderDTOs\SpotPaymentDTO.cs" />
+    <Compile Include="DTOs\ServiceProviderDTOs\SpotReservationDTO.cs" />
+    <Compile Include="DTOs\ServiceProviderDTOs\SpotReviewDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AdminServices\Class1.cs" />
     <Compile Include="Services\CustomerServices\CustomerService.cs" />
@@ -59,6 +66,7 @@
     <Compile Include="Services\CustomerServices\ReservationService.cs" />
     <Compile Include="Services\CustomerServices\ReviewService.cs" />
     <Compile Include="Services\ServiceProviderServices\Class1.cs" />
+    <Compile Include="Services\ServiceProviderServices\ParkingSpotsService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
