--- a/PaulParkingManagement/PaulParkingManagement.csproj
+++ b/PaulParkingManagement/PaulParkingManagement.csproj
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\Customer\CustomerController.cs" />
     <Compile Include="Controllers\Customer\PaymentController.cs" />
     <Compile Include="Controllers\Customer\ReservationController.cs" />
@@ -100,6 +101,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -113,16 +115,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BLL\BLL.csproj">
       <Project>{7775cc61-303b-463e-b4f7-06a02dd34573}</Project>
       <Name>BLL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DAL\DAL.csproj">
-      <Project>{0e528fc8-852c-4458-8113-e1d1abb18ceb}</Project>
-      <Name>DAL</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
